<resources>
    <string name="app_name">QCM Lyon 1</string>

    <!-- Global view string -->
    <string name="separator">graphic separator</string>

    <!-- Strings related to login -->
    <string name="auth_username_hint">Username</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_login_button">Login</string>
    <string name="auth_error">Nom d\'utilisateur ou mot de passe incorrect.</string>

    <string name="content_description_on_iut_brand">Official IUT brand</string>
    <string name="content_description_on_right_hand_upper_corner">Pink triangle</string>

    <string name="set_prof">prof</string>
    <string name="set_user">user</string>

    <!-- Strings related to group -->
    <string name="group1_1">S1G1</string>
    <string name="group1_2">S1G2</string>
    <string name="group1_3">S1G3</string>
    <string name="group2_1">S2G1</string>
    <string name="group2_2">S2G2</string>
    <string name="group2_3">S2G3</string>

    <!-- Strings related to qcm edition -->
    <string name="mcq_edition_title">Nom du QCM :</string>
    <string name="mcq_edition_description">Description :</string>
    <string name="mcq_edition_type">Type de QCM :</string>
    <string name="mcq_edition_type_negative">-1 point mauvaise réponse</string>
    <string name="mcq_edition_type_classic">0 point mauvaise réponse</string>
    <string name="mcq_edition_group">Groupes :</string>
    <string name="mcq_edition_coefficient">Coefficient :</string>
    <string name="mcq_edition_submit">Créer le QCM</string>
    <string name="mcq_edition_edit">Valider les modifications</string>

    <!-- Strings related to teacher panel -->
    <string name="teacher_panel_marks">Notes</string>
    <string name="teacher_panel_mcq">QCM</string>

    <!-- Strings related to student panel -->
    <string name="student_panel_mcq_to_do">A faire</string>
    <string name="student_panel_mcq_done">Fait</string>

    <!-- Strings related to MCQ List View item -->
    <string name="default_list_create_button">Ajouter</string>

    <string name="mcq_list_item_remove_description">Icon de supression qcm</string>
    <string name="mcq_list_item_edit_description">Icon modification qcm</string>

    <!-- Strings related to question List View item -->
    <string name="question_id_display">Question n°%d</string>

    <!-- Strings related to question edition -->
    <string name="question_edition_title">Intitulé de la question</string>
    <string name="question_edition_answer_title">Entrez vos réponses (cochez si vrai)</string>
    <string name="question_edition_answer_content_hint">Réponse</string>
    <string name="question_edition_answer_add_text">Ajouter une réponse</string>
    <string name="questions_edition_add_button">Valider</string>
    <string name="answer_remove_button_content_description">Remove answer button</string>

    <!-- Strings related to student sections -->
    <string name="student_submit_mcq">Valider QCM</string>
    <string name="question_answer_previous">PRECEDENT</string>
    <string name="previous_question_button">Previous Question Button</string>
    <string name="question_answer_next">SUIVANT</string>
    <string name="next_question_button">Next Question Button</string>

    <!-- Strings related to marks -->
    <string name="mark_sorting_text">Trier par : </string>
    <string name="average">Moyenne</string>
    <string-array name="mark_sorting_choices">
        <item>QCM</item>
        <item>Etudiant</item>
    </string-array>

    <!-- Strings related to Correction Report Dialog -->
    <string name="dialog_correction_report_mark_text">Note : %.2f/20 (%d/%d)</string>
    <string name="dialog_correction_report_coefficient_text">Coefficient : %.2f</string>

    <!-- Strings related to List Activities -->
    <string name="default_list_description_teacher">Panneau d\'édition des QCMs</string>
    <string name="default_list_description_done">Liste des QCMs finis</string>
    <string name="default_list_description_todo">Liste des QCMs à faire</string>
  
    <!-- Strings related to Toast -->
    <string name="mcq_successful_modification">Votre QCM à bien été modifié.</string>
    <string name="mcq_successful_creation">Votre QCM à bien été ajouté.</string>
    <string name="mcq_submission_failed">Vous devez renseigner tout les champs.</string>
    <string name="question_invalid_submission">Votre question n\'est pas valide.</string>

</resources>
