<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="fr.iutmindfuck.qcmiutlyon1.activity.MCQEditionActivity"
    tools:showIn="@layout/activity_mcq_edition">

    <android.support.v7.widget.Toolbar
        android:id="@+id/mcq_edition_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Title Section -->

            <TextView style="@style/WideFormView"
                android:id="@+id/mcq_edition_title"

                android:labelFor="@+id/mcq_edition_title_input"
                android:text="@string/mcq_edition_title"/>

            <ImageView style="@style/separator"
                android:layout_below="@+id/mcq_edition_title"
                android:contentDescription="@string/separator" />

            <EditText style="@style/WideEditView"
                android:id="@+id/mcq_edition_title_input"
                android:layout_below="@id/mcq_edition_title"

                android:maxLength="128"
                android:inputType="text" />

            <!-- Description Section -->

            <TextView style="@style/WideFormView"
                android:id="@+id/mcq_edition_description"
                android:layout_below="@+id/mcq_edition_title_input"

                android:labelFor="@+id/mcq_edition_description_input"
                android:text="@string/mcq_edition_description"/>

            <ImageView style="@style/separator"
                android:layout_below="@+id/mcq_edition_description"
                android:contentDescription="@string/separator"
                />

            <EditText style="@style/WideEditView"
                android:id="@+id/mcq_edition_description_input"
                android:layout_below="@id/mcq_edition_description"

                android:maxLength="256"
                android:maxLines="6"
                android:inputType="textMultiLine" />

            <!-- Type Section -->

            <TextView style="@style/WideFormView"
                android:id="@+id/mcq_edition_type"
                android:layout_below="@+id/mcq_edition_description_input"

                android:labelFor="@+id/mcq_edition_type_selector"
                android:text="@string/mcq_edition_type"/>

            <ImageView style="@style/separator"
                android:layout_below="@+id/mcq_edition_type"
                android:contentDescription="@string/separator"
                />

            <RadioGroup style="@style/WideFormView"
                android:id="@+id/mcq_edition_type_selector"
                android:layout_below="@+id/mcq_edition_type"
                android:checkedButton="@+id/mcq_edition_type_selector_negative">

                <RadioButton
                    android:id="@+id/mcq_edition_type_selector_negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/mcq_edition_type_negative"/>

                <RadioButton
                    android:id="@+id/mcq_edition_type_selector_classic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/mcq_edition_type_classic"/>
            </RadioGroup>

            <!-- Group Section -->

            <TextView style="@style/WideFormView"
                android:id="@+id/mcq_edition_group"
                android:layout_below="@+id/mcq_edition_type_selector"

                android:labelFor="@id/mcq_edition_group_selector"
                android:text="@string/mcq_edition_group"/>

            <ImageView style="@style/separator"
                android:layout_below="@+id/mcq_edition_group"
                android:contentDescription="@string/separator"
                />

            <include layout="@layout/group_checkbox_section" style="@style/WideFormView"
                android:id="@+id/mcq_edition_group_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mcq_edition_group"/>

            <!-- Coefficient section -->

            <TextView style="@style/WideFormView"
                android:id="@+id/mcq_edition_coefficient"
                android:layout_below="@+id/mcq_edition_group_selector"

                android:labelFor="@+id/mcq_edition_coefficient_input"
                android:text="@string/mcq_edition_coefficient"/>

            <ImageView style="@style/separator"
                android:layout_below="@+id/mcq_edition_coefficient"
                android:contentDescription="@string/separator" />

            <EditText style="@style/WideEditView"
                android:id="@+id/mcq_edition_coefficient_input"
                android:layout_below="@id/mcq_edition_coefficient"

                android:inputType="numberDecimal" />

            <Button style="@style/BasicButton"
                android:id="@+id/mcq_edition_submit"

                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/mcq_edition_coefficient_input"

                android:onClick="submitMCQ"
                android:text="@string/mcq_edition_submit"/>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>