<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/auth_edit_text_shape">

    <TextView style="@style/WideTitleView"
        android:id="@+id/dialog_correction_report_title" />

    <ImageView style="@style/separator"
        android:id="@+id/dialog_correction_report_title_separator"

        android:layout_below="@+id/dialog_correction_report_title"
        android:contentDescription="@string/separator" />

    <TextView style="@style/WideTextView"
        android:id="@+id/dialog_correction_report_description"

        android:layout_marginBottom="10dp"
        android:layout_below="@+id/dialog_correction_report_title_separator" />

    <TextView style="@style/WideFormView"
        android:id="@+id/dialog_correction_report_mark"

        android:layout_below="@+id/dialog_correction_report_description"
        android:layout_alignParentEnd="false"

        android:text="@string/dialog_correction_report_mark_text"/>

    <TextView style="@style/WideFormView"
        android:id="@+id/dialog_correction_report_type"

        android:layout_below="@+id/dialog_correction_report_mark"
        android:layout_alignParentEnd="false" />

    <TextView style="@style/WideFormView"
        android:id="@+id/dialog_correction_report_coefficient"

        android:layout_below="@+id/dialog_correction_report_type"
        android:layout_alignParentEnd="false"

        android:text="@string/dialog_correction_report_coefficient_text"/>

</RelativeLayout>